Project crud done

--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -18,13 +18,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- <link href="https://cdn.datatables.net/1.12.1/css/bootstrap/dataTables.bootstrap5.min.css" rel="stylesheet" /> -->
+    <link href="https://cdn.datatables.net/1.12.1/css/bootstrap/dataTables.bootstrap5.min.css" rel="stylesheet" />
     <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/dataTables.bootstrap/bootstrap.min.js"></script> -->
   </head>
 
   <body>
-    <!-- example 5 left and center only with empty space right -->
     <nav
       class="navbar navbar-expand-sm navbar-dark bg-primary flex-sm-nowrap flex-wrap"
     >
@@ -265,7 +264,7 @@
 				<h4 class="modal-title w-100">Are you sure?</h4>	
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 			</div>
-          <form id="delete-user" name="delete-user">
+          <form id="delete-project" name="delete-project">
 
 			<div class="modal-body">
 				<p>Do you really want to delete these records? This process cannot be undone.</p>
