--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <script src="assets/js/jquery/jquery.min.js"></script>
     <script src="assets/js/checkuser.js"></script>
     <meta charset="UTF-8" />
@@ -11,264 +12,219 @@
     <link rel="stylesheet" href="assets/css/toast.css" />
     <link rel="stylesheet" href="assets/css/modal.css" />
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     <link href="https://cdn.datatables.net/1.12.1/css/bootstrap/dataTables.bootstrap5.min.css" rel="stylesheet" />
     <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/dataTables.bootstrap/bootstrap.min.js"></script> -->
-  </head>
+</head>
 
-  <body>
-    <nav
-      class="navbar navbar-expand-sm navbar-dark bg-primary flex-sm-nowrap flex-wrap"
-    >
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler flex-grow-sm-1 flex-grow-0 me-2"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbar5"
-        >
+<body>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary flex-sm-nowrap flex-wrap">
+        <div class="container-fluid">
+            <button class="navbar-toggler flex-grow-sm-1 flex-grow-0 me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbar5">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <span class="navbar-brand flex-grow-1">Admin</span>
-        <div
-          class="navbar-collapse collapse flex-grow-1 justify-content-center"
-          id="navbar5"
-        >
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#users">Users</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="admin_projects">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#tasks">Tasks</a>
-            </li>
-          </ul>
-          <div class="flex-grow-1"></div>
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <button class="navBtn" onclick="logout()"><i class="fa fa-sign-out"></i> Logout</button>
-            </li>
-          </ul>
+            <span class="navbar-brand flex-grow-1">Admin</span>
+            <div class="navbar-collapse collapse flex-grow-1 justify-content-center" id="navbar5">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin">Users</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin_projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#tasks">Tasks</a>
+                    </li>
+                </ul>
+                <div class="flex-grow-1"></div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <button class="navBtn" onclick="logout()"><i class="fa fa-sign-out"></i> Logout</button>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
     <div class="container mt-4" id="projects">
-      <div class="float-left"><h3>Projects</h3></div>
-      <div class="float-right">
-        <button
-          class="btn btn-primary"
-          data-toggle="modal"
-          data-target="#formModal"
-        >
+        <div class="float-left">
+            <h3>Projects</h3>
+        </div>
+        <div class="float-right">
+            <button class="btn btn-primary" data-toggle="modal" data-target="#formModal">
           <i class="fa fa-add"></i> Create Project
         </button>
-      </div>
-      <br /><br /><br />
-      <table
-        id="projectsTable"
-        class="table table-striped table-bordered"
-        cellspacing="0"
-        width="100%"
-      >
-        <thead>
-          <tr>
-            <th>pid</th>
-            <th>SNo</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Owner Name</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
+        </div>
+        <br /><br /><br />
+        <table id="projectsTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    <th>pid</th>
+                    <th>SNo</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Owner Name</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
 
-        <tbody>
-        </tbody>
-      </table>
+            <tbody>
+            </tbody>
+        </table>
     </div>
 
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="formModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="formModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="formModalLabel">Create Project</h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
+    <!-- Create Project Modal -->
+    <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="formModalLabel">Create Project</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-          </div>
-          <div class="modal-body">
-            <form name="create-project" id="create-project">
-              <div class="form-group">
-                <label for="name">Name</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="name"
-                  name="name"
-                  aria-describedby="nameHelp"
-                  placeholder="Enter Project Name"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="desc">Description</label>
-                <textarea
-                  class="form-control"
-                  id="desc"
-                  name="desc"
-                  aria-describedby="descHelp"
-                  rows="7"
-                  placeholder="Enter Description atleast 20 characters"
-                  required
-                ></textarea>
-              </div>
-              <div class="form-group">
-                <label for="password">Owner Name</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="owner"
-                  name="owner"
-                  placeholder="Owner Name (optional)"
-                />
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-              >
+                </div>
+                <div class="modal-body">
+                    <form name="create-project" id="create-project">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" id="name" name="name" aria-describedby="nameHelp" placeholder="Enter Project Name" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="desc">Description</label>
+                            <textarea class="form-control" id="desc" name="desc" aria-describedby="descHelp" rows="7" placeholder="Enter Description atleast 20 characters" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Owner Name</label>
+                            <input type="text" class="form-control" id="owner" name="owner" placeholder="Owner Name (optional)" />
+                        </div>
+                </div>
+                </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
               Close
             </button>
-            <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
-          </div>
-        </form>
+                    <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
+                </div>
+                </form>
+            </div>
         </div>
-      </div>
     </div>
     <!-- Modal end -->
     <!-- Edit Modal -->
-    <div
-      class="modal fade"
-      id="formEditModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="formModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="formEditModalLabel">Update Project</h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
+    <div class="modal fade" id="formEditModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="formEditModalLabel">Update Project</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-          </div>
-          <div class="modal-body">
-            <form name="edit-project" id="edit-project">
-              <div class="form-group">
-                <label for="ename">Name</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="ename"
-                  name="ename"
-                  aria-describedby="nameHelp"
-                  placeholder="Enter Project Name"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="edesc">Description</label>
-                <textarea
-                  class="form-control"
-                  id="edesc"
-                  name="edesc"
-                  aria-describedby="edescHelp"
-                  rows="7"
-                  placeholder="Enter Description atleast 20 characters"
-                  required
-                ></textarea>
-              </div>
-              <div class="form-group">
-                <label for="eowner">Owner Name</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="eowner"
-                  name="eowner"
-                  placeholder="Owner Name"
-                />
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-              >
+                </div>
+                <div class="modal-body">
+                    <form name="edit-project" id="edit-project">
+                        <div class="form-group">
+                            <label for="ename">Name</label>
+                            <input type="text" class="form-control" id="ename" name="ename" aria-describedby="nameHelp" placeholder="Enter Project Name" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="edesc">Description</label>
+                            <textarea class="form-control" id="edesc" name="edesc" aria-describedby="edescHelp" rows="7" placeholder="Enter Description atleast 20 characters" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="eowner">Owner Name</label>
+                            <input type="text" class="form-control" id="eowner" name="eowner" placeholder="Owner Name" />
+                        </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
               Close
             </button>
-            <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
-          </div>
-        </form>
+                    <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
+                </div>
+                </form>
+            </div>
         </div>
-      </div>
     </div>
+    <!-- Modal end -->
+    <!-- Show project Modal -->
+    <div class="modal fade" id="formShowModal" tabindex="-1" role="dialog" aria-labelledby="formShowModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="formShowModalLabel">Project Details</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+                </div>
+                <div class="modal-body" id="projectDetails">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+              Close
+            </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal end -->
+    <!-- Add project Modal -->
+    <div class="modal fade" id="formAddModal" tabindex="-1" role="dialog" aria-labelledby="formAddModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="formAddModalLabel">Add members</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+                </div>
+                <div class="modal-body">
+                    <form name="add-members" id="add-members">
+                        <div class="form-group">
+                            <label for="ename">Name</label>
+                            <input type="text" class="form-control" id="efname" name="fname" aria-describedby="nameHelp" placeholder="Enter Project Name" required />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+              Close
+            </button>
+                    <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal end -->
+    <!-- Add Team Members Modal -->
+
     <!-- Modal end -->
 
     <!-- Confirm Modal -->
-<div id="deleteModal" class="modal fade">
-	<div class="modal-dialog modal-confirm">
-		<div class="modal-content">
-			<div class="modal-header flex-column">
-				<div class="icon-box">
-          <i class="fas fa-times-circle"></i>
-				</div>						
-				<h4 class="modal-title w-100">Are you sure?</h4>	
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			</div>
-          <form id="delete-project" name="delete-project">
+    <div id="deleteModal" class="modal fade">
+        <div class="modal-dialog modal-confirm">
+            <div class="modal-content">
+                <div class="modal-header flex-column">
+                    <div class="icon-box">
+                        <i class="fas fa-times-circle"></i>
+                    </div>
+                    <h4 class="modal-title w-100">Are you sure?</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                </div>
+                <form id="delete-project" name="delete-project">
 
-			<div class="modal-body">
-				<p>Do you really want to delete these records? This process cannot be undone.</p>
-			</div>
-      
-			<div class="modal-footer justify-content-center">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-				<button type="submit" class="btn btn-danger">Delete</button>
-			</div>
-      </form>
-		</div>
-	</div>
+                    <div class="modal-body">
+                        <p>Do you really want to delete these records? This process cannot be undone.</p>
+                    </div>
 
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
     <script src="assets/js/jquery/jquery.min.js"></script>
@@ -278,5 +234,6 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
     <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
-  </body>
+</body>
+
 </html>
