Project API working fixed warnings

--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -2,7 +2,18 @@
     color: #fff;
 }
 
-tr {
+
+/* Modal scroll view  */
+
+.modal-dialog {
+    overflow-y: initial !important;
+}
+
+.modal-body {
+    overflow-y: auto;
+}
+
+#projectsTable tr {
     cursor: pointer;
 }
 
