--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -80,7 +80,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formModalLabel">Create Project</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" id="createProjectBtn" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
                 </div>
@@ -95,11 +95,15 @@
                             <textarea class="form-control" id="desc" name="desc" aria-describedby="descHelp" rows="7" placeholder="Enter Description atleast 20 characters" required></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="password">Owner Name</label>
-                            <input type="text" class="form-control" id="owner" name="owner" placeholder="Owner Name (optional)" />
+                            <label for="owner">Owner Name</label>
+                            <select class="form-control" id="ownerList" name="ownerList" aria-label=".form-select-lg example">
+                                <!-- <option value="employee" selected>Employee</option>
+                                <option value="manager">Manager</option>
+                                <option value="admin">Admin</option> -->
+                            </select>
+                            <!-- <input type="text" class="form-control" id="owner" name="owner" placeholder="Owner Name (optional)" /> -->
                         </div>
                 </div>
-                </form>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">
               Close
@@ -179,11 +183,19 @@
               <span aria-hidden="true">&times;</span>
             </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" style="height:300px">
                     <form name="add-members" id="add-members">
                         <div class="form-group">
-                            <label for="ename">Name</label>
-                            <input type="text" class="form-control" id="efname" name="fname" aria-describedby="nameHelp" placeholder="Enter Project Name" required />
+                            <label for="members" id="pTitle"></label><br>
+                            <label for="members" id="members">Select Members</label>
+                            <ul class="list-group list-group-flush" id="listMembers">
+                                <!-- <li class="list-group-item">
+                                    <div class="custom-control custom-checkbox">
+                                        <input type="checkbox" class="custom-control-input" id="check1" checked>
+                                        <label class="custom-control-label" for="check1">Check me</label>
+                                    </div>
+                                </li> -->
+                            </ul>
                         </div>
                     </form>
                 </div>
@@ -230,6 +242,7 @@
     <script src="assets/js/jquery/jquery.min.js"></script>
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="assets/js/toast.js"></script>
+    <script src="assets/js/api_utility.js"></script>
     <script src="assets/js/projects.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
     <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
