Implementing add/modfiy members on project

--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -189,15 +189,9 @@
                             <label for="members" id="pTitle"></label><br>
                             <label for="members" id="members">Select Members</label>
                             <ul class="list-group list-group-flush" id="listMembers">
-                                <!-- <li class="list-group-item">
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="check1" checked>
-                                        <label class="custom-control-label" for="check1">Check me</label>
-                                    </div>
-                                </li> -->
+                                <!-- Filled by js -->
                             </ul>
                         </div>
-                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">
@@ -205,6 +199,7 @@
             </button>
                     <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
                 </div>
+                </form>
             </div>
         </div>
     </div>
