--- a/src/main/webapp/template/admin.html
+++ b/src/main/webapp/template/admin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <script src="assets/js/jquery/jquery.min.js"></script>
     <script src="assets/js/checkuser.js"></script>
     <meta charset="UTF-8" />
@@ -11,89 +12,67 @@
     <link rel="stylesheet" href="assets/css/toast.css" />
     <link rel="stylesheet" href="assets/css/modal.css" />
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-    <link href="https://cdn.datatables.net/1.12.1/css/bootstrap/dataTables.bootstrap5.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
     <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/dataTables.bootstrap/bootstrap.min.js"></script> -->
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- example 5 left and center only with empty space right -->
-    <nav
-      class="navbar navbar-expand-sm navbar-dark bg-primary flex-sm-nowrap flex-wrap"
-    >
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler flex-grow-sm-1 flex-grow-0 me-2"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbar5"
-        >
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary flex-sm-nowrap flex-wrap">
+        <div class="container-fluid">
+            <button class="navbar-toggler flex-grow-sm-1 flex-grow-0 me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbar5">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <span class="navbar-brand flex-grow-1">Admin</span>
-        <div
-          class="navbar-collapse collapse flex-grow-1 justify-content-center"
-          id="navbar5"
-        >
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#users">Users</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="admin_projects">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#tasks">Tasks</a>
-            </li>
-          </ul>
-          <div class="flex-grow-1"></div>
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <button class="navBtn" onclick="logout()"><i class="fa fa-sign-out"></i> Logout</button>
-            </li>
-          </ul>
+            <span class="navbar-brand flex-grow-1">Admin</span>
+            <div class="navbar-collapse collapse flex-grow-1 justify-content-center" id="navbar5">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#users">Users</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="admin_projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#tasks">Tasks</a>
+                    </li>
+                </ul>
+                <div class="flex-grow-1"></div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <button class="navBtn" onclick="logout()"><i class="fa fa-sign-out"></i> Logout</button>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
     <div class="container mt-4" id="users">
-      <div class="float-left"><h3>Users</h3></div>
-      <div class="float-right">
-        <button
-          class="btn btn-primary"
-          data-toggle="modal"
-          data-target="#formModal"
-        >
+        <div class="float-left">
+            <h3>Users</h3>
+        </div>
+        <div class="float-right">
+            <button class="btn btn-primary" data-toggle="modal" data-target="#formModal">
           <i class="fa fa-add"></i>Add User
         </button>
-      </div>
-      <br /><br /><br />
-      <table
-        id="usersTable"
-        class="table table-striped table-bordered"
-        cellspacing="0"
-        width="100%"
-      >
-        <thead>
-          <tr>
-            <th>uid</th>
-            <th>SNo</th>
-            <th>Username</th>
-            <th>E-Mail</th>
-            <th>Role</th>
-            <th>Joined</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
+        </div>
+        <br /><br /><br />
+        <table id="usersTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr>
+                    <th>uid</th>
+                    <th>SNo</th>
+                    <th>Username</th>
+                    <th>E-Mail</th>
+                    <th>Role</th>
+                    <th>Joined</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
 
-        <tbody id="tbody">
-          <!-- <tr>
+            <tbody id="tbody">
+                <!-- <tr>
             <td>1</td>
             <td>admin</td>
             <td>admin@admin.com</td>
@@ -106,143 +85,76 @@
               <span><i class="fas fa-trash"></i></span>
             </td>
           </tr> -->
-        </tbody>
-      </table>
+            </tbody>
+        </table>
     </div>
 
     <!-- Modal -->
-    <div
-      class="modal fade"
-      id="formModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="formModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="formModalLabel">Add User</h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
+    <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="formModalLabel">Add User</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-          </div>
-          <div class="modal-body">
-            <form name="add-user" id="add-user">
-              <div class="form-group">
-                <label for="name">Username</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="name"
-                  name="name"
-                  aria-describedby="emailHelp"
-                  placeholder="Enter username"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="email">Email address</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  name="email"
-                  aria-describedby="emailHelp"
-                  placeholder="Enter email"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="password">Password</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="password"
-                  name="password"
-                  placeholder="Password"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="role">Role</label>
-                <br />
-                <select class="form-control" id="role" name="role" aria-label=".form-select-lg example">
+                </div>
+                <div class="modal-body">
+                    <form name="add-user" id="add-user">
+                        <div class="form-group">
+                            <label for="name">Username</label>
+                            <input type="text" class="form-control" id="name" name="name" aria-describedby="emailHelp" placeholder="Enter username" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email address</label>
+                            <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter email" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="Password" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="role">Role</label>
+                            <br />
+                            <select class="form-control" id="role" name="role" aria-label=".form-select-lg example">
                   <option value="employee" selected>Employee</option>
                   <option value="manager">Manager</option>
                   <option value="admin">Admin</option>
                 </select>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-              >
+                        </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
               Close
             </button>
-            <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
-          </div>
-        </form>
+                    <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
+                </div>
+                </form>
+            </div>
         </div>
-      </div>
     </div>
     <!-- Modal end -->
     <!-- Edit Modal -->
-    <div
-      class="modal fade"
-      id="formEditModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="formEditModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="formModalLabel">Edit User</h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
+    <div class="modal fade" id="formEditModal" tabindex="-1" role="dialog" aria-labelledby="formEditModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="formModalLabel">Edit User</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-          </div>
-          <div class="modal-body">
-            <form id="edit-user" name="edit-user">
-              <div class="form-group">
-                <label for="name">Username</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="ename"
-                  name="ename"
-                  aria-describedby="enameHelp"
-                  placeholder="Enter username"
-                  required
-                />
-              </div>
-              <div class="form-group">
-                <label for="email">Email address</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="eemail"
-                  name="eemail"
-                  aria-describedby="eemailHelp"
-                  placeholder="Enter email"
-                  required
-                />
-              </div>
-              <!-- <div class="form-group">
+                </div>
+                <div class="modal-body">
+                    <form id="edit-user" name="edit-user">
+                        <div class="form-group">
+                            <label for="name">Username</label>
+                            <input type="text" class="form-control" id="ename" name="ename" aria-describedby="enameHelp" placeholder="Enter username" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email address</label>
+                            <input type="email" class="form-control" id="eemail" name="eemail" aria-describedby="eemailHelp" placeholder="Enter email" required />
+                        </div>
+                        <!-- <div class="form-group">
                 <label for="password">Password</label>
                 <input
                   type="password"
@@ -252,56 +164,52 @@
                   placeholder="New Password"
                 />
               </div> -->
-              <div class="form-group">
-                <label for="role">Role</label>
-                <br />
-                <select class="form-control" id="erole" name="erole" aria-label=".form-select-lg example">
+                        <div class="form-group">
+                            <label for="role">Role</label>
+                            <br />
+                            <select class="form-control" id="erole" name="erole" aria-label=".form-select-lg example">
                   <option value="employee" selected>Employee</option>
                   <option value="manager">Manager</option>
                   <option value="admin">Admin</option>
                 </select>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-              >
+                        </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
               Close
             </button>
-            <input type="submit" id="esubmit" class="btn btn-primary" value="Update" />
-          </div>
-        </form>
+                    <input type="submit" id="esubmit" class="btn btn-primary" value="Update" />
+                </div>
+                </form>
+            </div>
         </div>
-      </div>
     </div>
     <!-- Modal end -->
 
     <!-- Confirm Modal -->
-<div id="deleteModal" class="modal fade">
-	<div class="modal-dialog modal-confirm">
-		<div class="modal-content">
-			<div class="modal-header flex-column">
-				<div class="icon-box">
-          <i class="fas fa-times-circle"></i>
-				</div>						
-				<h4 class="modal-title w-100">Are you sure?</h4>	
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			</div>
-          <form id="delete-user" name="delete-user">
+    <div id="deleteModal" class="modal fade">
+        <div class="modal-dialog modal-confirm">
+            <div class="modal-content">
+                <div class="modal-header flex-column">
+                    <div class="icon-box">
+                        <i class="fas fa-times-circle"></i>
+                    </div>
+                    <h4 class="modal-title w-100">Are you sure?</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                </div>
+                <form id="delete-user" name="delete-user">
 
-			<div class="modal-body">
-				<p>Do you really want to delete these records? This process cannot be undone.</p>
-			</div>
-      
-			<div class="modal-footer justify-content-center">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-				<button type="submit" class="btn btn-danger">Delete</button>
-			</div>
-      </form>
-		</div>
-	</div>
+                    <div class="modal-body">
+                        <p>Do you really want to delete these records? This process cannot be undone.</p>
+                    </div>
+
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </div>
+                </form>
+            </div>
+        </div>
 
     </div>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.js"></script> -->
@@ -313,5 +221,6 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
     <script src="assets/js/jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/jquery/dataTables.bootstrap5.min.js"></script>
-  </body>
+</body>
+
 </html>
