--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="assets/css/toast.css" />
     <link rel="stylesheet" href="assets/css/modal.css" />
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-    <link href="https://cdn.datatables.net/1.12.1/css/bootstrap/dataTables.bootstrap5.min.css" rel="stylesheet" />
+    <!-- <link href="https://cdn.datatables.net/1.12.1/css/bootstrap/dataTables.bootstrap5.min.css" rel="stylesheet" /> -->
     <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/dataTables.bootstrap/bootstrap.min.js"></script> -->
 </head>
@@ -64,7 +65,7 @@
                     <th>SNo</th>
                     <th>Name</th>
                     <th>Description</th>
-                    <th>Owner Name</th>
+                    <th>Owner</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -182,7 +183,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
                 </div>
-                <div class="modal-body" style="height:300px">
+                <div class="modal-body" style="height:420px">
                     <form name="add-members" id="add-members">
                         <div class="form-group">
                             <label for="members" id="pTitle"></label><br>
