--- a/src/main/webapp/template/admin_projects.html
+++ b/src/main/webapp/template/admin_projects.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="assets/css/modal.css" />
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link href="https://cdn.datatables.net/1.12.1/css/bootstrap/dataTables.bootstrap5.min.css" rel="stylesheet" /> -->
     <!-- <script src="assets/js/jquery.jquery/jquery.dataTables.min.js"></script>
     <script src="assets/js/dataTables.bootstrap/bootstrap.min.js"></script> -->
@@ -23,9 +24,10 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary flex-sm-nowrap flex-wrap">
         <div class="container-fluid">
-            <button class="navbar-toggler flex-grow-sm-1 flex-grow-0 me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbar5">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler flex-grow-sm-1 flex-grow-0 me-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbar5">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <span class="navbar-brand flex-grow-1">Admin</span>
             <div class="navbar-collapse collapse flex-grow-1 justify-content-center" id="navbar5">
                 <ul class="navbar-nav mx-auto">
@@ -48,14 +50,14 @@
             </div>
         </div>
     </nav>
-    <div class="container mt-4" id="projects">
+    <div class="container mt-1" id="projects">
         <div class="float-left">
             <h3>Projects</h3>
         </div>
         <div class="float-right">
             <button class="btn btn-primary" data-toggle="modal" data-target="#formModal">
-          <i class="fa fa-add"></i> Create Project
-        </button>
+                <i class="fa fa-add"></i> Create Project
+            </button>
         </div>
         <br /><br /><br />
         <table id="projectsTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -76,39 +78,39 @@
     </div>
 
     <!-- Create Project Modal -->
-    <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true">
+    <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formModalLabel">Create Project</h5>
                     <button type="button" id="createProjectBtn" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     <form name="create-project" id="create-project">
                         <div class="form-group">
                             <label for="name">Name</label>
-                            <input type="text" class="form-control" id="name" name="name" aria-describedby="nameHelp" placeholder="Enter Project Name" required />
+                            <input type="text" class="form-control" id="name" name="name" aria-describedby="nameHelp"
+                                placeholder="Enter Project Name" required />
                         </div>
                         <div class="form-group">
                             <label for="desc">Description</label>
-                            <textarea class="form-control" id="desc" name="desc" aria-describedby="descHelp" rows="7" placeholder="Enter Description atleast 20 characters" required></textarea>
+                            <textarea class="form-control" id="desc" name="desc" aria-describedby="descHelp" rows="7"
+                                placeholder="Enter Description atleast 20 characters" required></textarea>
                         </div>
                         <div class="form-group">
                             <label for="owner">Owner Name</label>
-                            <select class="form-control" id="ownerList" name="ownerList" aria-label=".form-select-lg example">
-                                <!-- <option value="employee" selected>Employee</option>
-                                <option value="manager">Manager</option>
-                                <option value="admin">Admin</option> -->
+                            <select class="form-control" id="ownerList" name="ownerList"
+                                aria-label=".form-select-lg example">
                             </select>
-                            <!-- <input type="text" class="form-control" id="owner" name="owner" placeholder="Owner Name (optional)" /> -->
                         </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">
-              Close
-            </button>
+                        Close
+                    </button>
                     <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
                 </div>
                 </form>
@@ -117,34 +119,38 @@
     </div>
     <!-- Modal end -->
     <!-- Edit Modal -->
-    <div class="modal fade" id="formEditModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true">
+    <div class="modal fade" id="formEditModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formEditModalLabel">Update Project</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     <form name="edit-project" id="edit-project">
                         <div class="form-group">
                             <label for="ename">Name</label>
-                            <input type="text" class="form-control" id="ename" name="ename" aria-describedby="nameHelp" placeholder="Enter Project Name" required />
+                            <input type="text" class="form-control" id="ename" name="ename" aria-describedby="nameHelp"
+                                placeholder="Enter Project Name" required />
                         </div>
                         <div class="form-group">
                             <label for="edesc">Description</label>
-                            <textarea class="form-control" id="edesc" name="edesc" aria-describedby="edescHelp" rows="7" placeholder="Enter Description atleast 20 characters" required></textarea>
+                            <textarea class="form-control" id="edesc" name="edesc" aria-describedby="edescHelp" rows="7"
+                                placeholder="Enter Description atleast 20 characters" required></textarea>
                         </div>
                         <div class="form-group">
                             <label for="eowner">Owner Name</label>
-                            <input type="text" class="form-control" id="eowner" name="eowner" placeholder="Owner Name" />
+                            <input type="text" class="form-control" id="eowner" name="eowner"
+                                placeholder="Owner Name" />
                         </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">
-              Close
-            </button>
+                        Close
+                    </button>
                     <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
                 </div>
                 </form>
@@ -153,35 +159,37 @@
     </div>
     <!-- Modal end -->
     <!-- Show project Modal -->
-    <div class="modal fade" id="formShowModal" tabindex="-1" role="dialog" aria-labelledby="formShowModalLabel" aria-hidden="true">
+    <div class="modal fade" id="formShowModal" tabindex="-1" role="dialog" aria-labelledby="formShowModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formShowModalLabel">Project Details</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body" id="projectDetails">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">
-              Close
-            </button>
+                        Close
+                    </button>
                 </div>
             </div>
         </div>
     </div>
     <!-- Modal end -->
     <!-- Add project Modal -->
-    <div class="modal fade" id="formAddModal" tabindex="-1" role="dialog" aria-labelledby="formAddModalLabel" aria-hidden="true">
+    <div class="modal fade" id="formAddModal" tabindex="-1" role="dialog" aria-labelledby="formAddModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="formAddModalLabel">Add members</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body" style="height:420px">
                     <form name="add-members" id="add-members">
@@ -195,8 +203,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">
-              Close
-            </button>
+                        Close
+                    </button>
                     <input type="submit" id="submit" class="btn btn-primary" value="Submit" />
                 </div>
                 </form>
